# socket.io-client-rs

./: .travis.yml  Cargo.toml
async_flag/: Cargo.toml  README.md
async_flag/src/: lib.rs
examples/: ws_connect.rs
node-tests/: connect_test.sh  index.js  package.json
owned_subslice/: Cargo.toml
owned_subslice/src/: lib.rs
socket-io-client/: Cargo.toml
socket-io-client/examples/: socketio_test.rs  ws_connect.rs
socket-io-client/node-tests/: index.js  package-lock.json
socket-io-client/src/: callbacks.rs  connection.rs  emit.rs  lib.rs  protocol.rs  receive_task.rs  receiver.rs
socket-io-parse_uri/: Cargo.toml
socket-io-parse_uri/src/: lib.rs
socket-io-parseuri/: Cargo.toml
socket-io-parseuri/src/: lib.rs
socket-io-protocol/: Cargo.toml
socket-io-protocol/src/: engine.rs  socket.rs
socket-io-protocol/src/socket/: arg.rs  de.rs  mod.rs  parse.rs  ser.rs
socket-io-protocol/src/socket/arg/: deserialize.rs  mod.rs
socket-io-protocol/src/socket/args/: deserialize_attachments.rs  mod.rs  serialize_attachments.rs
src/: lib.rs
src/protocol/: engine.rs  mod.rs  socket.rs
