[package]
name = "socket-io-client"
version = "0.1.0"
authors = ["Sean Purcell <me@seanp.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = { version = "0.7", features = ["async-tls"] }
futures = { version = "0.3.5", features = ["unstable", "bilock"] }
http = "0.2"
thiserror = "1"

[dev-dependencies]
async_executors = { version = "0.3", features = ["tokio_tp"] }
async-tungstenite = { version = "0.7", features = ["tokio-runtime"] }
pin-project = "0.4"
structopt = "0.3"
tokio = { version = "0.2", features = ["full"] }
