[package]
name = "async_flag"
version = "0.1.0"
authors = ["Sean Purcell <me@seanp.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic = "0.4"
futures = "0.3"
pin-project = "0.4"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros", "time"] }
