[package]
name = "socket-io-client"
version = "0.1.0"
authors = ["Sean Purcell <me@seanp.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = { version = "0.7", features = ["async-tls"] }
futures = "0.3"
http = "0.2"
thiserror = "1"
