[package]
name = "socket-io-protocol"
version = "0.1.0"
authors = ["Sean Purcell <me@seanp.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "0.11"
lazy_static = "1.4"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
thiserror = "1.0"
